--- a/JS/index.html
+++ b/JS/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>We ❤️ JS</h1>
-    <script src="./primtivesNonPrimitives.js"></script>
+    <!-- <script src="./primtivesNonPrimitives.js"></script> -->
+     <script src="./IQ.js"></script>
 </body>
 </html>
